--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-<div id="app">
-{{ message }}
-</div>
-
+<body>
+  <div id="app">
+  {{ message }}
+  </div>
+</body>
 <script>
+  // Vue 2
+  // new Vue({
+  //   el: '#app'
+  // })
+
+  // new Vue({
+  //   el: '#app'
+  // }).mount('#app')
+
+  // Vue 3
   Vue.createApp({
     data() {
       return {
